[package]
name = "as-method"
version = "0.1.0"
edition = "2021"
authors = ["r01and <mu001999@outlook.com>"]
license = "MIT"
repository = "https://github.com/mu001999/as-method"
description = """
Call function using the method syntax!
"""

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "visit-mut"] }
quote = "1.0"
